Footer fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -489,5 +489,6 @@ a {
   }
   #copyright {
     visibility: hidden;
+    position: absolute;
   }
 }
