--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -86,5 +86,6 @@
 
   #copyright {
     visibility: hidden;
+    position: absolute;
   }
 }
